--- a/CSharpGame/Properties/Resources.resx
+++ b/CSharpGame/Properties/Resources.resx
@@ -181,4 +181,16 @@
   <data name="Apple32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Apple32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="kolobok1_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kolobok1_down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="kolobok1_left" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kolobok1_left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="kolobok1_right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kolobok1_right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="kolobok1_up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kolobok1_up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
